--- a/_notebooks/2021-12-03-m4-nixtla-ydata.ipynb
+++ b/_notebooks/2021-12-03-m4-nixtla-ydata.ipynb
@@ -83,8 +83,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-04 20:32:41.985003: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2021-12-04 20:32:41.985029: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2021-12-05 00:03:46.333178: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2021-12-05 00:03:46.333209: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ce56c330-a772-4ee0-9a55-4fc5ddb3c7d4",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "4        Y1  5  5182.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "eb7858c7-46b0-4e7e-b5f6-e1159423d447",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2f699057-b14f-48c1-845c-3029613183db",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ed507e6f-e654-444f-b2f0-6d304b93ebeb",
    "metadata": {},
    "outputs": [
@@ -361,18 +361,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-04 20:32:43.116115: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2021-12-04 20:32:43.116348: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2021-12-04 20:32:43.116364: W tensorflow/stream_executor/cuda/cuda_driver.cc:326] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2021-12-04 20:32:43.116389: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ip-172-31-89-104): /proc/driver/nvidia/version does not exist\n",
-      "2021-12-04 20:32:43.121435: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "2021-12-05 00:03:47.485002: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2021-12-05 00:03:47.485171: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2021-12-05 00:03:47.485181: W tensorflow/stream_executor/cuda/cuda_driver.cc:326] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2021-12-05 00:03:47.485201: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ip-172-31-89-104): /proc/driver/nvidia/version does not exist\n",
+      "2021-12-05 00:03:47.489813: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2021-12-04 20:32:43.125442: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "Emddeding network training:   0%|                                                                                                                                                           | 0/50 [00:00<?, ?it/s]2021-12-04 20:32:50.991402: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
-      "2021-12-04 20:32:51.029561: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 2999995000 Hz\n",
-      "Emddeding network training: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:11<00:00,  4.20it/s]\n",
-      "Supervised network training: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:07<00:00,  7.05it/s]\n",
-      "Joint networks training: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [02:58<00:00,  3.57s/it]\n"
+      "2021-12-05 00:03:47.493643: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "Emddeding network training:   0%|                                                                                                                                                           | 0/50 [00:00<?, ?it/s]2021-12-05 00:03:55.235291: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
+      "2021-12-05 00:03:55.273436: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 2999995000 Hz\n",
+      "Emddeding network training: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:12<00:00,  3.88it/s]\n",
+      "Supervised network training: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:07<00:00,  6.50it/s]\n",
+      "Joint networks training: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [03:01<00:00,  3.63s/it]\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "fc2779d9-d29e-4dc8-8c75-91940264bdd1",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7e0eb6b3-bc3b-448d-8c10-70669054a25d",
    "metadata": {},
    "outputs": [
@@ -446,31 +446,31 @@
        "      <th>0</th>\n",
        "      <td>Y1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.855188</td>\n",
+       "      <td>0.869384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Y1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.855188</td>\n",
+       "      <td>0.869384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Y1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.855188</td>\n",
+       "      <td>0.869384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Y1</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.855188</td>\n",
+       "      <td>0.869384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Y1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.855188</td>\n",
+       "      <td>0.869384</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -478,14 +478,14 @@
       ],
       "text/plain": [
        "  unique_id ds         y\n",
-       "0        Y1  0  0.855188\n",
-       "1        Y1  1  0.855188\n",
-       "2        Y1  2  0.855188\n",
-       "3        Y1  3  0.855188\n",
-       "4        Y1  4  0.855188"
+       "0        Y1  0  0.869384\n",
+       "1        Y1  1  0.869384\n",
+       "2        Y1  2  0.869384\n",
+       "3        Y1  3  0.869384\n",
+       "4        Y1  4  0.869384"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d672ff26-177f-4ee6-88a1-cbf1beb880dd",
    "metadata": {},
    "outputs": [],
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a4adbb43-dfef-4e99-a086-df38c4ea12be",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2aa2296d-e840-4727-b842-15f536446ad6",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a502291c-919c-446a-8c84-23846164548c",
    "metadata": {
     "tags": []
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e0d686bf-79de-4674-87ed-420110965de8",
    "metadata": {
     "tags": []
@@ -657,7 +657,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "686f4a44b56a41b58bbec6d88428ed5c",
+       "model_id": "7edaa77a3da643b0877c96fce123dda2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "08548d94-fbef-4a14-8f49-68a7e1a4197f",
    "metadata": {},
    "outputs": [],
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8afe2b60-3764-4d78-9097-4f08f7b02fa3",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a889deac-9a77-473f-94b4-523a0791eb11",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "19f1f89c-b19c-48c8-9a93-dd4d2f17dbaa",
    "metadata": {},
    "outputs": [
@@ -778,14 +778,14 @@
       "0         Non-trainable params\n",
       "44.2 K    Total params\n",
       "0.177     Total estimated model params size (MB)\n",
-      "/home/ubuntu/miniconda3/envs/nixtla-ydata/lib/python3.7/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:623: UserWarning: Checkpoint directory /home/ubuntu/fede/blog/_notebooks/lightning_logs/version_18/checkpoints exists and is not empty.\n",
+      "/home/ubuntu/miniconda3/envs/nixtla-ydata/lib/python3.7/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:623: UserWarning: Checkpoint directory /home/ubuntu/fede/blog/_notebooks/lightning_logs/version_19/checkpoints exists and is not empty.\n",
       "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73bc8b0731aa4e74aafcdfe8e5a79fec",
+       "model_id": "84077a99f88945dfbf8dd37ab703d0a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "bfc8be45-52c1-4823-aaeb-87982c219cab",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "7ad82491-1447-4b47-b58f-d754529c4d59",
    "metadata": {},
    "outputs": [],
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "6e67fd4b-cb46-4fe0-8adb-6f427a4ac134",
    "metadata": {},
    "outputs": [
@@ -872,7 +872,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da61162115f44ee7ae1203a908e67de3",
+       "model_id": "20965ef8850744d8b5eaf300a665d240",
        "version_major": 2,
        "version_minor": 0
       },
@@ -901,14 +901,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "76f0e3dd-7ddb-4640-8036-1a25e60f856e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "880f6def8b684c20a1f1d170218ee295",
+       "model_id": "8e00ef368e0d4d9382734889a0ee15ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "0ed648cc-ff64-4108-99c3-78d200251d3e",
    "metadata": {},
    "outputs": [],
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "031681d2-476f-4670-be39-47db699e01d5",
    "metadata": {},
    "outputs": [
@@ -977,32 +977,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>MAPE</th>\n",
        "      <th>SMAPE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Real</th>\n",
-       "      <td>27.939907</td>\n",
-       "      <td>19.686992</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Real</td>\n",
+       "      <td>26.940430</td>\n",
+       "      <td>19.400419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Synthetic</th>\n",
-       "      <td>25.937980</td>\n",
-       "      <td>19.924676</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Synthetic</td>\n",
+       "      <td>25.848949</td>\n",
+       "      <td>20.006246</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                MAPE      SMAPE\n",
-       "Real       27.939907  19.686992\n",
-       "Synthetic  25.937980  19.924676"
+       "       index       MAPE      SMAPE\n",
+       "0       Real  26.940430  19.400419\n",
+       "1  Synthetic  25.848949  20.006246"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1021,7 @@
     "\n",
     "results = pd.DataFrame(metrics_dict, index=['Real', 'Synthetic'])\n",
     "\n",
-    "results"
+    "results.reset_index()"
    ]
   },
   {
