add ydata comments

--- a/_notebooks/2021-12-03-m4-nixtla-ydata.ipynb
+++ b/_notebooks/2021-12-03-m4-nixtla-ydata.ipynb
@@ -7,8 +7,8 @@
     "tags": []
    },
    "source": [
-    "# \"Forecasting with Privacy at Scale (Nixtla & YData) \"\n",
-    "> \"Make your time series data private and then forecast them with Deep Learning models\"\n",
+    "# \"Forecasting with Synthetic Data at Scale (Nixtla & YData) \"\n",
+    "> \"Make synthetic time series data with your data and then forecast them with Deep Learning models\"\n",
     "\n",
     "- toc: true\n",
     "- branch: main\n",
@@ -32,7 +32,7 @@
    "id": "5a99e6a4-8c9d-4da1-84cb-26dc55f1caaa",
    "metadata": {},
    "source": [
-    " In this post, we explain how to use [nixtlats](https://github.com/Nixtla/nixtlats) and [ydata-synthetic](https://github.com/ydataai/ydata-synthetic), python libraries to address the problem of data privacy in the context of time series forecasting. We develop a deep learning forecasting pipeline without direct access to the original data and show that data anonymization has a minimal impact on the performance of the models."
+    " In this post, we explain how to use [nixtlats](https://github.com/Nixtla/nixtlats) and [ydata-synthetic](https://github.com/ydataai/ydata-synthetic), python libraries that allow you to generate synthetic data to train state-of-the-art deep learning models without any loss of data quality. We develop a deep learning forecasting pipeline without direct access to the original data and show that synthetic data has a minimal impact on the performance of the models."
    ]
   },
   {
@@ -50,11 +50,13 @@
    "source": [
     "In the last decade, neural network-based forecasting methods have become ubiquitous in large-scale forecasting applications, transcending industry boundaries into academia, as it has redefined the state-of-the-art in many practical tasks like demand planning, electricity load forecasting, reverse logistics, weather forecasting, as well as forecasting competitions like the M4 and M5.\n",
     "\n",
-    "However, one of the problems for those interested in creating forecasts is data privacy. In many applications, the user does not want the model to have access to the actual data, in particular, if the model training is done in the cloud or outside one's infrastructure. The above dramatically limit the practice, preventing the scaling of models for large datasets using available clouds.\n",
+    "However, one of the problems for those interested in creating forecasts is model development or software testing without using original data; this may be because the actual data takes time to collect, there are restrictions on its use, or the data simply does not exist. In many applications, the user does not want the model to have access to the actual data, in particular, if the model training is done in the cloud or outside one's infrastructure. The above dramatically limit the practice, preventing the scaling of models for large datasets using available clouds.\n",
     "\n",
-    "This post shows how to solve this problem using `nixtlats` and `ydata-synthetic`.  First, the user can anonymize the data using `ydata-synthetic` and subsequently train state-of-the-art neural forecasting algorithms using `nixtlats` without accessing the original data. Once the model is trained, the model can be sent to the owner of the original data and perform inference in the security of their infrastructure.\n",
+    "This post shows how to solve this problem using `nixtlats` and `ydata-synthetic`. First, the user can create synthetic data using `ydata-synthetic`; synthetic data is artificially created and keeps the original data properties, ensuring its business value while being compliant. Subsequently the user can train state-of-the-art neural forecasting algorithms using `nixtlats` without accessing the original data. Once the model is trained, the model can be sent to the owner of the original data and perform inference in the security of their infrastructure. The following diagram describes the process.\n",
     "\n",
-    "We evaluate and show the performance of the private model's predictions remains constant compared with the original model's predictions."
+    "![image](./flow.png)\n",
+    "\n",
+    "We evaluate and show the performance of the synthetic model's predictions remains constant compared with the original model's predictions."
    ]
   },
   {
@@ -293,7 +295,7 @@
    "id": "7bdf5175-18fd-427b-9619-b620b7cc905e",
    "metadata": {},
    "source": [
-    "### Creating private data using ydata-synthetic"
+    "### Creating synthetic data using ydata-synthetic"
    ]
   },
   {
@@ -301,7 +303,7 @@
    "id": "a12e95fc-1987-4880-a136-ec4d137cb8ba",
    "metadata": {},
    "source": [
-    "In this section we make private the training data defined by `Y_df_train` using the `TimeGAN` model from `ydata-synthetic`. You can learn more about the `TimeGAN` model seeing the post [Synthetic Time-Series Data: A GAN approach](https://towardsdatascience.com/synthetic-time-series-data-a-gan-approach-869a984f2239)."
+    "In this section we make synthetic the training data defined by `Y_df_train` using the `TimeGAN` model from `ydata-synthetic`. You can learn more about the `TimeGAN` model seeing the post [Synthetic Time-Series Data: A GAN approach](https://towardsdatascience.com/synthetic-time-series-data-a-gan-approach-869a984f2239)."
    ]
   },
   {
@@ -406,7 +408,7 @@
    "id": "090b8002-08d7-445e-960e-37b1727f4468",
    "metadata": {},
    "source": [
-    "Thus, the object `synth_data` contains the training data but now it is anonymized. To use `nixtlats` we need to transform `synth_data` to a pandas dataframe. This can be easy done using the following lines. "
+    "Thus, the object `synth_data` contains the synthetic training data. To use `nixtlats` we need to transform `synth_data` to a pandas dataframe. This can be easy done using the following lines. "
    ]
   },
   {
@@ -514,7 +516,7 @@
    "id": "1857aefb-b3ce-4946-8149-50bd94e0496b",
    "metadata": {},
    "source": [
-    "In this section, we use the previous anonymized dataset to train the ESRNN model, the winner of the M4 competition. This model is hybrid; by one hand, it fits each time series locally through an Exponential Smoothing model and then trains the levels using a Recurrent Neural Network. You can learn more about this model by seeing the post [Forecasting in Python with the ESRNN model](https://medium.com/analytics-vidhya/forecasting-in-python-with-esrnn-model-75f7fae1d242)."
+    "In this section, we use the previous synthetic data to train the ESRNN model, the winner of the M4 competition. This model is hybrid; by one hand, it fits each time series locally through an Exponential Smoothing model and then trains the levels using a Recurrent Neural Network. You can learn more about this model by seeing the post [Forecasting in Python with the ESRNN model](https://medium.com/analytics-vidhya/forecasting-in-python-with-esrnn-model-75f7fae1d242)."
    ]
   },
   {
@@ -1045,15 +1047,15 @@
    "id": "3c5287c1-2cac-41a3-83ff-324a61e18a13",
    "metadata": {},
    "source": [
-    "Data privacy is a common concern for many large companies. Here we will show a complete pipeline for anonymizing data and using it to train state-of-the-art Deep Learning models. As we saw, performance is not harmed, and even for some metrics, it is even better."
+    "Synthetic data have a wide range of applications. In this post we showed a full pipeline to create synthetic data and using it to train state-of-the-art Deep Learning models. As we saw, performance is not harmed, and even for some metrics, it is even better."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nixtla-ydata",
+   "display_name": "nixtla",
    "language": "python",
-   "name": "nixtla-ydata"
+   "name": "nixtla"
   },
   "language_info": {
    "codemirror_mode": {
