add minor changes

--- a/_notebooks/2021-12-03-m4-nixtla-ydata.ipynb
+++ b/_notebooks/2021-12-03-m4-nixtla-ydata.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# \"Forecasting with Synthetic Data at Scale (Nixtla & YData) \"\n",
-    "> \"Make synthetic time series data with your data and then forecast them with Deep Learning models\"\n",
+    "> \"Make synthetic time series data and then forecast it with Deep Learning models\"\n",
     "\n",
     "- toc: true\n",
     "- branch: main\n",
@@ -379,7 +379,7 @@
     }
    ],
    "source": [
-    "#%gist gistname: train-gan-nixtla-ydata.py\n",
+    "#%gist gistname: train-gan-nixtla-ydata.py upload: both\n",
     "synth = TimeGAN(model_parameters=gan_args, hidden_dim=24, seq_len=seq_len, n_seq=n_seq, gamma=1)\n",
     "synth.train([y_np], train_steps=50)"
    ]
@@ -672,7 +672,7 @@
     }
    ],
    "source": [
-    "#%gist gistname: fit-synth-model-nixtla-ydata.py\n",
+    "#%gist gistname: fit-synth-model-nixtla-ydata.py upload: both\n",
     "trainer.fit(model_synth, train_ts_loader_synth)"
    ]
   },
@@ -800,7 +800,7 @@
     }
    ],
    "source": [
-    "#%gist gistname: fit-real-model-nixtla-ydata.py\n",
+    "#%gist gistname: fit-real-model-nixtla-ydata.py upload: both\n",
     "trainer.fit(model, train_ts_loader)"
    ]
   },
@@ -887,7 +887,7 @@
     }
    ],
    "source": [
-    "#%gist gistname: synth-forecasts-nixtla-ydata.py\n",
+    "#%gist gistname: synth-forecasts-nixtla-ydata.py upload: both\n",
     "outputs_model_synth = trainer.predict(model_synth, test_ts_loader)\n",
     "_, y_hat_model_synth, _ = zip(*outputs_model_synth)\n",
     "y_hat_model_synth = t.cat([y_hat_[:, -1] for y_hat_ in y_hat_model_synth]).cpu().numpy()"
